<resources>
    <string name="app_name">LayananPengaduanPA</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_pengaduan">Pengaduan</string>
    <string name="title_pelaporan">Pelaporan</string>
    <string name="title_akun">Profil</string>
    <string name="title_kelola_akun">Kelola Akun</string>
    <string name="tab_text_proses">Belum Diproses</string>
    <string name="tab_text_selesai">Selesai</string>
    <string-array name="opsi_login">
        <item>Masyarakat</item>
        <item>SPKT Polsek</item>
        <item>Polisi</item>
        <item>Operator</item>
    </string-array>

    <string-array name="opsi_tambah_akun">
        <item>SPKT Polsek</item>
        <item>Polisi</item>
        <item>Operator</item>
    </string-array>

    <string-array name="subdistrict_array">
        <item>Bukit Raya</item>
        <item>Pelabuhan</item>
        <item>Lima Puluh</item>
        <item>Payung Sekaki</item>
        <item>Pekanbaru Kota</item>
        <item>Rumbai</item>
        <item>Rumbai Pesisir</item>
        <item>Senapelan</item>
        <item>Sukajadi</item>
        <item>Tampan</item>
        <item>Tenayan Raya</item>
    </string-array>

    <string-array name="kecamatan">
        <item>Bukit Raya</item>
        <item>Pelabuhan</item>
        <item>Lima Puluh</item>
        <item>Payung Sekaki</item>
        <item>Pekanbaru Kota</item>
        <item>Rumbai</item>
        <item>Rumbai Pesisir</item>
        <item>Senapelan</item>
        <item>Sukajadi</item>
        <item>Tampan</item>
        <item>Tenayan Raya</item>
        <item>Data Semua Aduan</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu_polisi">Menu Polisi</string>
    <string name="title_activity_menu_spkt">MainActivity</string>
    <string name="tambahLaporan">Tambah Data Pelaporan</string>
    <string name="kode_pengaduan">Masukkan Kode Pengaduan (ADUAN-xxxxx)</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="cari_aduan">1. Cari Aduan</string>
    <string name="tambah_laporan">Tambah Laporan</string>
    <string name="nama_pelapor">Nama Pelapor</string>
    <string name="tidak_ada">Tidak Ada</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="pelaporan">Pelaporan</string>
    <string name="lokasi">Lokasi Pelapor</string>
    <string name="kontak_pelapor">kontak pelapor</string>
    <string name="belum_diproses">BELUM DIPROSES</string>
    <string name="keterangan_penanganan">Keterangan Penanganan</string>
    <string name="nama_petugas">Nama Petugas</string>
    <string name="satuan_wilayah">Satuan Wilayah</string>
    <string name="keterangan_penanganan_oleh_kepolisian">Keterangan Penanganan oleh Kepolisian</string>
    <string name="share">Share</string>
    <string name="filter">Filter</string>
</resources>