<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/masyarakat_navigation"
    app:startDestination="@+id/navigation_beranda">

    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.icha.layananpengaduanpa.ui.masyarakat.beranda.BerandaFragment"
        android:label="@string/title_beranda"
        tools:layout="@layout/fragment_beranda" />

    <fragment
        android:id="@+id/navigation_pengaduan"
        android:name="com.icha.layananpengaduanpa.ui.masyarakat.pengaduan.PengaduanFragment"
        android:label="@string/title_pengaduan"
        tools:layout="@layout/fragment_pengaduan" />

    <fragment
        android:id="@+id/navigation_akun"
        android:name="com.icha.layananpengaduanpa.ui.masyarakat.akun.AkunFragment"
        android:label="@string/title_akun"
        tools:layout="@layout/fragment_akun" />
</navigation>