<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/operator_navigation"
    app:startDestination="@+id/navigation_beranda_operator">

    <fragment
        android:id="@+id/navigation_beranda_operator"
        android:name="com.icha.layananpengaduanpa.ui.operator.beranda.BerandaOperatorFragment"
        android:label="@string/title_beranda"
        tools:layout="@layout/fragment_beranda_operator" />

    <fragment
        android:id="@+id/navigation_rekap_aduan"
        android:name="com.icha.layananpengaduanpa.ui.spktpolsek.pengaduan.PengaduanFragment"
        android:label="@string/title_pengaduan"
        tools:layout="@layout/fragment_pengaduan_spkt" />

    <fragment
        android:id="@+id/navigation_kelolaakun"
        android:name="com.icha.layananpengaduanpa.ui.operator.kelolaakun.KelolaAkunFragment"
        android:label="@string/title_kelola_akun"
        tools:layout="@layout/fragment_kelola_akun" />
</navigation>