<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.polisi.pelaporan.postlaporan.CariPengaduanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtidaduan"
            android:text="@string/tambahLaporan"
            style="@style/TextContent.TitlePage"
            />

        <TextView
            android:text="@string/kode_pengaduan"
            style="@style/TextContent.HintField.withMargin"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:boxStrokeColor="@color/primaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_kode_aduan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/kode_pengaduan"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/kecamatan"
            style="@style/TextContent.HintField.withMargin"/>

        <Spinner
            android:id="@+id/opsiKecamatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/subdistrict_array"
            android:layout_margin="10dp"
            android:padding="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cari_aduan"
                android:text="@string/cari_aduan"
                style="@style/Button.ButtonDivide"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_tambah_laporan"
                style="@style/Button.ButtonDivide"
                android:text="@string/tambah_laporan"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/aduancv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/aduancv2"
            android:elevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_keterangan"
                    style="@style/TextContent.HintField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Data Aduan"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_pelapor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_baseline_person_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_keterangan"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/tv_nama_pelapor"
                    android:text="@string/nama_pelapor"
                    style="@style/TextContent.contentTitle"
                    app:layout_constraintStart_toEndOf="@+id/img_pelapor"
                    app:layout_constraintTop_toTopOf="@+id/img_pelapor" />

                <TextView
                    android:id="@+id/tv_data_nama_pelapor"
                    style="@style/TextContent.content.withMargin"
                    android:text="@string/tidak_ada"
                    app:layout_constraintStart_toEndOf="@+id/img_pelapor"
                    app:layout_constraintTop_toBottomOf="@+id/tv_nama_pelapor" />

                <ImageView
                    android:id="@+id/img_satwil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_baseline_call_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_data_nama_pelapor"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/tv_notelp"
                    android:text="@string/nomor_telepon"
                    style="@style/TextContent.contentTitle"
                    app:layout_constraintStart_toEndOf="@+id/img_pelapor"
                    app:layout_constraintTop_toTopOf="@+id/img_satwil" />

                <TextView
                    android:id="@+id/tv_notelp_pelapor"
                    android:text="@string/tidak_ada"
                    style="@style/TextContent.content.withMargin"
                    app:layout_constraintStart_toEndOf="@+id/img_satwil"
                    app:layout_constraintTop_toBottomOf="@+id/tv_notelp" />

                <ImageView
                    android:id="@+id/img_laporan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/report"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_notelp_pelapor"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/tv_laporan"
                    android:text="Isi Pengaduan"
                    style="@style/TextContent.contentTitle"
                    app:layout_constraintStart_toEndOf="@+id/img_laporan"
                    app:layout_constraintTop_toTopOf="@+id/img_laporan" />

                <TextView
                    android:id="@+id/tv_ket_aduan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lines="6"
                    android:text="@string/pelaporan"
                    android:background="#F8F8F8"
                    style="@style/TextContent.content.withMargin"
                    app:layout_constraintEnd_toEndOf="@+id/tv_keterangan"
                    app:layout_constraintStart_toEndOf="@+id/img_laporan"
                    app:layout_constraintTop_toBottomOf="@+id/tv_laporan" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_lokasi_aduan"
                android:text="@string/lokasi"
                style="@style/Button.ButtonDivide"
                android:backgroundTint="@color/info"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_kontak_pelapor"
                android:text="@string/kontak_pelapor"
                style="@style/Button.ButtonDivide"
                android:backgroundTint="@color/danger"/>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/progressBar"/>
</FrameLayout>