<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground"
    tools:context=".ui.masyarakat.pengaduan.postaduan.DetailAduanActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/aduancv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:padding="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width='match_parent'
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/kode_aduan_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="KODE ADUAN"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_bold"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/status_aduan" />

            <TextView
                android:id="@+id/kec_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Kecamatan"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/tgladuan_txt"
                android:fontFamily="@font/montserrat_semibold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kode_aduan_txt" />

            <TextView
                android:id="@+id/tgladuan_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Tgl Aduan : 02/05/2022"
                android:fontFamily="@font/montserrat_light"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/status_aduan"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="Belum Diproses"
                android:gravity="center"
                android:textColor="#BD251C"
                android:fontFamily="@font/montserrat_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/lokasi_btn"
                android:layout_width="0dp"
                android:text="@string/lokasi"
                style="@style/Button"
                android:fontFamily="@font/montserrat_bold"
                app:layout_constraintEnd_toEndOf="@+id/status_aduan"
                app:layout_constraintStart_toStartOf="@+id/status_aduan"
                app:layout_constraintTop_toBottomOf="@+id/status_aduan"
                android:backgroundTint="@color/info"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sdg_diproses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Atur Sedang Diproses"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:backgroundTint="@color/warning"
                android:visibility="gone"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/aduancv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@+id/aduancv1"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/text_aduan"
                style="@style/TextContent.content"
                android:fontFamily="@font/montserrat_regular"
                android:text="Isi Pengaduan" />

            <TextView
                android:id="@+id/tv_isi_aduan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F8F8F8"
                android:fontFamily="@font/montserrat_regular"
                android:lines="4" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/aduancv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/aduancv2"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="10dp"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_keterangan"
                style="@style/TextContent.contentTitle"
                android:layout_width="match_parent"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/keterangan_penanganan"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="20dp" />

            <ImageView
                android:id="@+id/img_petugas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_baseline_person_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_keterangan"/>

            <TextView
                android:id="@+id/tv_nama_petugas"
                style="@style/TextContent.contentTitle"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/nama_petugas"
                app:layout_constraintStart_toEndOf="@+id/img_petugas"
                app:layout_constraintTop_toTopOf="@+id/img_petugas" />

            <TextView
                android:id="@+id/tv_data_nama_petugas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_light"
                android:text="Tidak Ada"
                android:textColor="#616161"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/img_petugas"
                app:layout_constraintTop_toBottomOf="@+id/tv_nama_petugas" />

            <ImageView
                android:id="@+id/img_satwil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_baseline_person_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_data_nama_petugas" />

            <TextView
                android:id="@+id/tv_satuan_wilayah"
                style="@style/TextContent.contentTitle"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/satuan_wilayah"
                app:layout_constraintStart_toEndOf="@+id/img_petugas"
                app:layout_constraintTop_toTopOf="@+id/img_satwil" />

            <TextView
                android:id="@+id/tv_satwil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_light"
                android:text="Tidak Ada"
                android:textColor="#616161"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/img_satwil"
                app:layout_constraintTop_toBottomOf="@+id/tv_satuan_wilayah" />

            <ImageView
                android:id="@+id/img_laporan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_baseline_person_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_satwil" />

            <TextView
                android:id="@+id/tv_laporan"
                style="@style/TextContent.contentTitle"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/keterangan_penanganan_oleh_kepolisian"
                app:layout_constraintStart_toEndOf="@+id/img_laporan"
                app:layout_constraintTop_toTopOf="@+id/img_laporan" />

            <TextView
                android:id="@+id/tv_ket_aduan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="#F8F8F8"
                android:fontFamily="@font/montserrat_light"
                android:lines="5"
                android:text="Pelaporan"
                android:textColor="#616161"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_keterangan"
                app:layout_constraintStart_toEndOf="@+id/img_laporan"
                app:layout_constraintTop_toBottomOf="@+id/tv_laporan" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_kontak_petugas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#367A59"
        android:drawableStart="@android:drawable/ic_menu_call"
        android:drawableTint="@color/white"
        android:text="kontak petugas"
        app:layout_constraintEnd_toEndOf="@+id/aduancv3"
        app:layout_constraintStart_toStartOf="@+id/aduancv3"
        app:layout_constraintTop_toBottomOf="@+id/aduancv3"
        android:visibility="visible"/>
</androidx.constraintlayout.widget.ConstraintLayout>